# keynoteapi

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG  README.md  TODO  azure-pipelines.yml  check_keynote  check_keynote.py  keynoteCli  requirements.txt  setup.cfg  setup.py
keynoteapi/: __init__.py  check_keynote.py  keynoteCli.py  keynoteapi.py  keynotecli.py
rpm-deployment/: Dockerfile
tests/: __init__.py  test_keynoteapi.py  test_keynotecli.py
tests/json/: empty.json  getdashboarddata_grid.json  getdashboarddata_list.json  getgraphdata_scatter_baseonly.json
tests/xml/: getdashboarddata_grid.xml  getdashboarddata_list.xml
