[metadata]
description-file = README.md

# configure nosetests
# https://nose.readthedocs.org/en/latest/api/commands.html
[nosetests]
verbosity=3
detailed-errors=1
#pdb=1
debug=nose.loader
# test without multiprocessing
processes=0
with-doctest=1
with-coverage=1
cover-package=keynoteapi
cover-min-percentage=90
cover-erase=1
cover-html=0
cover-html-dir=build/html
